oxiplate-derive/tests/broken/derive/inline-unparseable.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/inline-unparseable.rs:4:24
  |
4 | #[oxiplate_inline(html html html)]
  |                        ^^^^

error: expected `:`
 --> tests/broken/derive/inline-unparseable.rs:4:24
  |
4 | #[oxiplate_inline(html html html)]
  |                        ^^^^
