oxiplate-derive/tests/broken/derive/inline-unparseable.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(html html html)]
struct Data;

fn main() {
    print!("{}", Data);
}